# automation-exercises

./: .gitignore  main.py  pyproject.toml
api/: apis.resource  register.resource  register_api.resource
page_objects/: account_created_page.resource  account_deleted_page.resource  api_testing_page.resource  cart_modal_page.resource  contact_us_page.resource  homepage.resource  login_page.resource  product_detail_page.resource  products_page.resource  shoppingcart_page.resource  signup_page.resource  subscription_form.resource  testcases_page.resource
resources/: browsing.resource  generate_data.resource  reusables.resource
results/: playwright-log-1767572078743419700.txt  playwright-log.txt
tests/: apis_tests.robot  cart_tests.robot  login_user.robot  misc_tests.robot  products_test.robot  register_user.robot
