[project]
name = "automation-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "robotframework>=7.4.1",
    "robotframework-browser>=19.12.3",
    "robotframework-faker>=6.0.0",
    "robotframework-requests>=0.9.7",
    "robotframework-robocop>=7.1.0",
]
